force-app/main/default/objects/Follow_up__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <formula>TEXT( Related_Source__r.Source_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Source</label>
    <type>Text</type>
</CustomField>