force-app/main/default/objects/Follow_up__c/fields/Follow_Up_Age__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Age__c</fullName>
    <formula>NOW() - Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>