force-app/main/default/objects/Follow_up__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <formula>TEXT( Related_Source__r.Lead_status1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>