force-app/main/default/objects/Follow_up__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <formula>Scheduled_Date__c &lt; Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending</label>
    <type>Checkbox</type>
</CustomField>