force-app/main/default/objects/Follow_up__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <formula>IF(ISPICKVAL(Related_Source__r.Allocated_Project__c,&apos;Zuari Gangotri Tribhuja&apos;),Related_Source__r.Phone__c, Related_Source__r.Primary_Phone1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>