force-app/main/default/objects/Follow_up__c/fields/Project_Name_R__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_R__c</fullName>
    <formula>TEXT(Related_Source__r.Allocated_Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name(R)</label>
    <type>Text</type>
</CustomField>