force-app/main/default/objects/Follow_up__c/validationRules/Date_To_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_To_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !ISBLANK(Next_Follow_Up_Date__c),
    Next_Follow_Up_Date__c &lt; NOW()
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Please select a future date</errorMessage>
</ValidationRule>