force-app/main/default/objects/Follow_up__c/validationRules/Next_Follow_Up_Date_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_Date_Is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Expected_Follow_Up__c, &apos;Continue Follow Up&apos;),
    ISBLANK(Next_Follow_Up_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Please Fill The Next Follow Up date</errorMessage>
</ValidationRule>