force-app/main/default/objects/Follow_up__c/validationRules/Status_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Completed&apos;), 
    ISPICKVAL(Expected_Follow_Up__c,&apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Expected_Follow_Up__c</errorDisplayField>
    <errorMessage>Please Fill Next Follow Status</errorMessage>
</ValidationRule>