force-app/main/default/objects/Follow_up__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>Follow_Up_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled,Missed</value>
    </filters>
    <label>All</label>
</ListView>