force-app/main/default/objects/Follow_up__c/listViews/Pending_follow_Up.listView-meta.xml
<ListView>
    <fullName>Pending_follow_Up</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>Primary_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Pending follow Up</label>
</ListView>