force-app/main/default/objects/Follow_up__c/listViews/Zuari_Gangothri_Tribhuja.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangothri_Tribhuja</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Primary_Phone__c</columns>
    <columns>Enquiry_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allocated_Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <label>Zuari Gangothri Tribhuja</label>
</ListView>