force-app/main/default/objects/Follow_up__c/listViews/Zuari_Gangothri_Tribhuja_Todays.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangothri_Tribhuja_Todays</fullName>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Description__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>Primary_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Zuari Gangothri Tribhuja Todays</label>
</ListView>