force-app/main/default/objects/Follow_up__c/listViews/Zuari_Garden_City_Plots.listView-meta.xml
<ListView>
    <fullName>Zuari_Garden_City_Plots</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Enquiry_Name__c</columns>
    <columns>Allocated_Project__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Primary_Phone__c</columns>
    <columns>Enquiry_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allocated_Project__c</field>
        <operation>equals</operation>
        <value>Zuari Garden City</value>
    </filters>
    <label>Zuari Garden City - Plots</label>
</ListView>